Fixed rwd, white space

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -43,7 +43,7 @@ main {
 	align-items: center;
 	flex-wrap: wrap;
 	width: 60%;
-	background-color: #333;
+	background-color: #fff;
 	border-radius: 10px;
 	padding: 20px;
 }
